# funcker

./: .editorconfig  .gitignore  package-lock.json  package.json
func/get_git_sha/: Dockerfile  main.py  manifest.json
func/get_terraform_outputs/: Dockerfile  main.ts  manifest.json  test.js
func/increment/: Dockerfile  main.py  manifest.json
pkg/deno/: mod.js  plug.js
pkg/node/: README.md  index.js  package-lock.json  package.json  plug.js  run.js  utils.js
pkg/python/: README.md  makefile  pyproject.toml
pkg/python/funcker/cli/: main.py
pkg/python/funcker/plug/: main.py
pkg/python/funcker/run/: main.py
spec/: pipeline.js
